# automatizacion

./: .gitignore  automation.py  full_automation.py  pyproject.toml  test.py
src/automatizacion/: constants.py  helpers.py  sender_message.py
tests/: test_sender.py
