[project]
name = "automatizacion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "merzamac", email = "100945727+merzamac@users.noreply.github.com"},
]
dependencies = ["playwright>=1.52.0", "pytest>=8.3.5", "pandas>=2.2.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "\"\""}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
